Edit to work with latest Gradle and PaperMC 1.18.1-101.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,6 @@
-main: "me.alexpado.pmc.PluginEntry"
-version: "1.0"
 name: "PaperMC-Starter-Plugin"
+version: "1.0"
+description: Example Plugin
+
+main: "me.alexpado.pmc.PluginEntry"
+api-version: 1.18
