--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,11 @@ version '1.0-SNAPSHOT'
 // === Change this to match the workspace defined inside the start.sh script.
 String workspace = '.papermc'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.17
+
+configurations {
+    compile
+}
 
 repositories() {
     mavenCentral()
@@ -16,8 +20,8 @@ repositories() {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.14.4-R0.1-SNAPSHOT'
+    //testCompile group: 'junit', name: 'junit', version: '3.8.2'
+    implementation group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.16.5-R0.1-SNAPSHOT'
 }
 
 jar {
